--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -556,7 +556,7 @@
                 }
                 else{
                     $('#comments').css({'display' : 'none'});
-                    comments_tab.html("Comments");
+                    comments_tab.html("<i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i>");
                 }
                 comments_open = 1 - comments_open;
                 LoadComments();
