--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -189,19 +189,38 @@
                 <li class="collection-item avatar" style="padding: 0px; margin: 0px">
                     <div class="row" style="padding: 0px; margin: 0px">
                         <div class="col s6 m4 l4 xl4" >
-                            <span> <sup id="upvotes_count{{ ITEM.link.id }}">{{ ITEM.upvotes }}</sup><sup> upvote(s)</sup></span>
-                            <button class="btn green upvote upvote_upper_button waves-effect waves-light {{ITEM.upvote_button}} center" id="upvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}"> <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> </button>
+                            <br>
+                            <button class="btn green upvote upvote_upper_button waves-effect waves-light {{ITEM.upvote_button}} center" id="upvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}"> 
+
+                            {% if ITEM.upvote_button == '' %}
+                            <i class="material-icons" style="color: white; background-color: transparent">thumb_up</i> 
+                            <span style="vertical-align: top;">{{ ITEM.upvotes }}</span>
+                            {% else %}
+                            <i class="material-icons" style="color: green; background-color: transparent">thumb_up</i> 
+                            <span style="vertical-align: top; color: green;">{{ ITEM.upvotes }}</span>
+                            {% endif %}
+                            </button>
                         </div>
                         <div class="col s6 m4 l4 xl4" >
-                            <span> <sup id="downvotes_count{{ ITEM.link.id }}">{{ ITEM.downvotes }} </sup><sup> downvote(s)</sup></span>
-                            <button title="downvote" class="btn waves-effect waves-light  red btn-block white-text downvote downvote_upper_button {{ ITEM.downvote_button }}" id="downvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}" > <i class="material-icons" style="color: white; background-color: transparent" >thumb_down</i></button>
+                            <br>
+                            <button title="downvote" class="btn waves-effect waves-light  red btn-block white-text downvote downvote_upper_button {{ ITEM.downvote_button }}" id="downvote_button{{ ITEM.link.id }}" link_id = "{{ ITEM.link.id }}" > 
+                            {% if ITEM.downvote_button == '' %}
+                            <i class="material-icons" style="color: white; background-color: transparent">thumb_down</i> 
+                            <span style="vertical-align: top;">{{ ITEM.downvotes }}</span>
+                            {% else %}
+                            <i class="material-icons" style="color: red; background-color: transparent">thumb_down</i> 
+                            <span style="vertical-align: top; color: red;">{{ ITEM.downvotes }}</span>
+                            {% endif %}
+                            </button>
                         </div>
                         <div class="col s12 m4 l4 xl4">
-                            <span>
-                            <sup><span id="num_comments1{{ ITEM.link.id }}">{{ITEM.link.comment_set.count}}</span> comment(s)</sup>
-                            </span>
-                            <button class="btn blue waves-light center comments_tab waves-effect" id="comments_tab{{ ITEM.link.id }}"><i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i></button>
+                            <br>
+                            <button class="btn blue waves-light center comments_tab waves-effect" id="comments_tab{{ ITEM.link.id }}">
+                            <i class='material-icons middle' style='color: white; cbackground-color: transparent' >comment</i>
+                            <span style="vertical-align: top;">{{ITEM.link.comment_set.count}}</span>
+                            </button>
                         </div>
+
                        <div class="col s12 m12 l12 xl12 hide-on-large-only">
                             <br><br>
                         </div>
@@ -273,7 +292,7 @@
 </ul>
 
 
-    <!- sharing dropdown mobile -->
+    <!-- sharing dropdown mobile -->
     <ul class="dropdown-content" id="dropdownShare{{ITEM.link.id}}" style="max-width: 200px">
     <li>
         <a href = "#"> Share Via
@@ -465,9 +484,6 @@
         $(function(){
 
 
-
-
-
             $('.dropdown-button').dropdown({
               inDuration: 300,
               outDuration: 225,
@@ -487,42 +503,42 @@
             {% for item in all_links %}
                 LoadComments({{ item.link.id }});
             {% endfor %}
+
+
             $('.upvote_upper_button').click(function(){
             var link_id;
             link_id = $(this).attr("link_id");
             $.get('/link/' + link_id + '/vote/', {type: 'U'}, function(data){
-                       $('#upvotes_count' + link_id).html(data['upvotes']);
-                       $('#downvotes_count' + link_id).html(data['downvotes']);
-                       $('#upvote_button' + link_id).removeClass('lighten-5');
                        $('#downvote_button' + link_id).removeClass('lighten-5');
-                       //$(".downvote").toggleClass(data['downvote_button']);
-                        console.log(data.upvote_button);
-                        console.log(data.downvote_button);
-                        if(data['upvote_button'] == '')
-                        {
-                        }
-                        else
-                        {
+ 
+                        if(data['upvote_button'] == ''){
+                            $('#upvote_button' + link_id).removeClass('lighten-5');
+                            $('#upvote_button' + link_id).html("<i class='material-icons' style='color: white; background-color: transparent'>thumb_up</i> <span style='vertical-align: top;'>"
+                                + data['upvotes'] + "</span>");
+                        }else{
                             $('#upvote_button' + link_id).addClass('lighten-5');
+                            $('#upvote_button' + link_id).html("<i class='material-icons' style='color: green; background-color: transparent'>thumb_up</i> <span style='vertical-align: top;color: green;'>"+data['upvotes'] + "</span>");
                         }
+                        $('#downvote_button' + link_id).html("<i class='material-icons' style='color: white; background-color: transparent'>thumb_down</i> <span style='vertical-align: top;'>"+
+                            data['downvotes'] + "</span>");
                 });
             });
             $('.downvote_upper_button').click(function(){
             var link_id;
             link_id = $(this).attr("link_id");
             $.get('/link/' + link_id + '/vote/', {type: 'D'}, function(data){
-                       $('#downvotes_count' + link_id).html(data['downvotes']);
-                       $('#upvotes_count' + link_id).html(data['upvotes']);
                        $('#upvote_button' + link_id).removeClass('lighten-5');
-                       $('#downvote_button' + link_id).removeClass('lighten-5');
-                      // $(".downvote").addClass(data['downvote_button']);
-                        if(data['downvote_button'] == '')
-                        {
-                        }
-                        else
-                        {
+                       
+                        if(data['downvote_button'] == ''){
+                            $('#downvote_button' + link_id).removeClass('lighten-5');
+                            $('#downvote_button' + link_id).html("<i class='material-icons' style='color: white; background-color: transparent'>thumb_down</i> <span style='vertical-align: top;'>"+
+                            data['downvotes'] + "</span>");
+                        }else{
                             $('#downvote_button' + link_id).addClass('lighten-5');
+                            $('#downvote_button' + link_id).html("<i class='material-icons' style='color: red; background-color: transparent'>thumb_down</i> <span style='vertical-align: top;color: red;'>"+ data['downvotes'] + "</span>");
                         }
+                        $('#upvote_button' + link_id).html("<i class='material-icons' style='color: white; background-color: transparent'>thumb_up</i> <span style='vertical-align: top;'>"+
+                            data['upvotes'] + "</span>");
                 });
             });
             var comments_tab = $('.comments_tab');
@@ -532,24 +548,22 @@
             {% endfor %}
             comments_tab.click(function () {
                 var id = this.id;
-                console.log(id);
                 id = id.split('');
-                console.log(id);
                 id.splice(0, 12);
-                console.log(id);
                 id = id.join("");
-                console.log(id);
                 if(comments_open[id] == 0){
                     $('#comments' + id).css({'display' : 'block'});
                     $('#comments_tab' + id).html("Hide Comments");
                 }
                 else{
                     $('#comments' + id).css({'display' : 'none'});
-                    $('#comments_tab' + id).html("<i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i>");
+                    $('#comments_tab' + id).html("<i class='material-icons' style='color: white; cbackground-color: transparent' >comment</i><span style='vertical-align: top;'> " + 
+                        globalCommentsObject[id].length + "</span>");
                 }
                 comments_open[id] = 1 - comments_open[id];
                 LoadComments(id);
             });
+
             var commentsSubmitButton = $('.commentSubmitButton');
             commentsSubmitButton.click(function (){
                 console.log("Called comment submit button");
