--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -57,6 +57,20 @@
         text-transform: none;
     }
 
+    .mobile-button
+    {
+        height: 30px;
+        width : 30px;
+        vertical-align: top;
+
+    }
+
+    .mobile-button-i
+    {
+        height: 30px;
+        width: 30px;
+    }
+
 </style>
 
 <div class="container" style="padding: 0px;">
@@ -68,17 +82,15 @@
                     <div class="row"  style="padding: 0px; margin: 0px">
                         <!-- user avatar -->
                         <img class="responsive-img circle"  height = "40px" width="40px" src="{{link.user.profile.pic}}" />
-                        <div class="row">
-                            <div class="col s12 m4 l4 xl4">
+                        <div class="row" style="margin: 0px; padding: 0px">
+                            <div class="col s4 m4 l4 xl4" style="word-wrap: break-word; margin: 0px; padding: 0px; font-size: 0.5em">
                                 <span class="title blue-grey-text ">{{ link.user }}<br/>
                         <sup>{{ time }}</sup></span>
                         <br><br>
                             </div>
-                           <div class="col s12 m8 l8 xl8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
+                           <div class="col s8 m8 l8 xl8 right right-align hide-on-med-and-down" id="icons_extra" style="margin: 0px; padding: 0px">
 
-       <!--           <a class='dropdown-button btn' href='#' data-activates='dropdownButtons'>Drop Me!</a> -->
-
-                   <div class="row right right-align" style="margin: 0px; padding: 0px">
+                               <div class="row right right-align" style="margin: 0px; padding: 0px">
                       <div class="col s12 m12 l12 xl12right right-align" style="margin: 0px; padding: 0px">
 
                           <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Show URL" data-activates="dropdown21" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
@@ -87,17 +99,15 @@
 
                       </div>
                   </div>
-
                   </div>
-
-                            <div class="col s12 m8 l8 xl8 left left-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
+                            <div class="col s8 m8 l8 xl8 right right-align hide-on-large-only" id="icons_extra" style="margin: 0px; padding: 0px">
 
                    <div class="row left left-align" style="margin: 0px; padding: 0px">
-                      <div class="col s12 m12 l12 xl12 left left-align" style="margin: 0px; padding: 0px">
+                      <div class="col s12 m12 l12 xl12 right right-align" style="margin: 0px; padding: 0px">
 
-                          <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Show URL" data-activates="dropdown11" id="show_url_button"><i class="material-icons">remove_red_eye</i></a>
-                                        <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdown10"><i class="material-icons">share</i></a>
-                          <a class="btn-floating dropdown-button btn-small waves-effect waves-light blue" href="#" title="More actions" data-activates="dropdownButtons" id="more_actions"><i class="material-icons">more_horiz</i></a>
+                          <a class="btn-floating dropdown-button mobile-button btn-small waves-effect waves-light blue" href="#" title="Show URL" data-activates="dropdown11" id="show_url_button"><i class="material-icons mobile-button-i" style="font-size: 1.5em; line-height: 10px">remove_red_eye</i></a>
+                                        <a class="btn-floating mobile-button dropdown-button btn-small waves-effect waves-light blue" href="#" title="Share" data-beloworigin="true" data-activates="dropdown10"><i class="material-icons mobile-button-i"  style="font-size: 1.5em; line-height: 10px">share</i></a>
+                          <a class="btn-floating dropdown-button mobile-button btn-small waves-effect waves-light blue" href="#" title="More actions" data-activates="dropdownButtons" id="more_actions"><i class="material-icons mobile-button-i"  style="font-size: 1.5em; line-height: 10px">more_horiz</i></a>
                       </div>
                   </div>
                   </div>
@@ -195,8 +205,8 @@
                     </li>
                     -->
                 <!-- Tags -->
-                <li class="collection-item avatar" style=" min-height: 10px">
-                     <i class="material-icons circle blue-grey">assignment</i>
+                <li class="collection-item avatar" style="padding: 5px; min-height: 10px">
+
                   <!--  <span class="title blue-grey-text">Tags</span> -->
                     <p style="margin: 1px; padding: 4px;">
                         {% for tag in link.tags.all %}
