background fix for mobile (hopeful)

--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -34,7 +34,8 @@
 @import url('https://fonts.googleapis.com/css?family=Dosis');
 </style>
 
-<body background="{% static 'link.jpg' %}" style="background-attachment: fixed;background-size: 100% 100%;">
+<body background="{% static 'link.jpg' %}" style="background-attachment: fixed;background-size: 100% 100%;background-repeat: no-repeat; 
+    background-position: center;background-attachment: fixed;height:100%;width:100%">
 
 <div class="navbar-fixed">
 <nav class=" white-text" style="background-color: #26a69a">
