--- a/linkbook/links/templates/links/view_links.html
+++ b/linkbook/links/templates/links/view_links.html
@@ -51,8 +51,12 @@
 
     </style>
     <div class="container">
-    <div class="row">
-        <h3 class="center blue-grey-text" style="padding: 1%">{{user.first_name}}'s Links</h3>
+    <div class="row blue-grey" style="width:100%; padding: 0px; margin: 0px">
+        <!--
+        <h3 class="center center-align "><span class="blue-grey white-text" style="padding: 3px; border-radius: 5%; font-family: Dosis;">{{user.first_name}}'s Links</span></h3> -->
+
+        <h3 class="center center-align white-text" style="font-family: Dosis; width: 100%; padding: 1px; margin-bottom: 0px">{{user.first_name}}'s Links</h3>
+
     </div>
         <div class="row" style="margin: 1px; padding: 1px">
             <div class="col s12 m12 l12 xl12">
