--- a/linkbook/links/templates/links/book.html
+++ b/linkbook/links/templates/links/book.html
@@ -33,10 +33,15 @@
     }
     </style>
     <div class = "container" style="padding: 0px;">
+    <div class="row blue-grey" style="width:100%; padding: 0px; margin: 0px">
+        <!--
+        <h3 class="center center-align "><span class="blue-grey white-text" style="padding: 3px; border-radius: 5%; font-family: Dosis;">{{user.first_name}}'s Links</span></h3> -->
+
+        <h3 class="center center-align white-text" style="font-family: Dosis; width: 100%; padding: 1px; margin-bottom: 0px">{{user.first_name}}'s Book</h3>
+
+    </div>
         <div class="row" style="padding: 0px; margin: 0px">
-            <h3 class="center blue-grey-text" style="padding: 1%">{{user.first_name}}'s Book</h3>
-        </div>
-        <div class="row" style="padding: 0px; margin: 0px">
+        <br><br>
             {% for link in book %}
                 <div class="col s12 m12 l4 xl4">
                     <div class="row" style="padding: 0px; margin: 0px">
