--- a/linkbook/links/templates/links/tags.html
+++ b/linkbook/links/templates/links/tags.html
@@ -17,14 +17,18 @@
     </style>
 
     <div class = "container">
+    <div class="row blue-grey" style="width:100%; padding: 0px; margin: 0px">
+        <!--
+        <h3 class="center center-align "><span class="blue-grey white-text" style="padding: 3px; border-radius: 5%; font-family: Dosis;">{{user.first_name}}'s Links</span></h3> -->
 
-    <div class="row">
-        <h3 class="center blue-grey-text">Links with tag '{{tagname}}'</h3>
+        <h3 class="center center-align white-text" style="font-family: Dosis; width: 100%; padding: 1px; margin-bottom: 0px">Links with tag <span style="font-weight: 900">'{{tagname}}'</span></h3>
+
     </div>
+    <br><br>
     {% for link in tag%}
-        <div class="row">
-            <div class="col s1 l4 m4 xl4"></div>
-            <div class="col s10 m4 l4 xl4">
+        <div class="row" style="margin: 1px; padding: 1px">
+
+            <div class="col s12 m4 l4 xl4" style="margin: 1px; padding: 1px">
                 <div class="card horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
                       <div class="card-title center"><h5>{{link.title}}</h5></div>
@@ -53,7 +57,7 @@
                   </div>
                 </div>
             </div>
-            <div class="col s1 m4 l4"></div>
+
         </div>
 
     {% endfor %}
