--- a/linkbook/core/templates/core/project.html
+++ b/linkbook/core/templates/core/project.html
@@ -16,4 +16,13 @@
         </div>
     </div>
 <script type="text/javascript" src="https://www.draw.io/js/viewer.min.js"></script>
+    <script>
+
+        ($(function () {
+
+            $('.modal').modal();
+
+        }));
+
+    </script>
 {% endblock %}
