--- a/linkbook/core/templates/core/profile.html
+++ b/linkbook/core/templates/core/profile.html
@@ -146,6 +146,9 @@
                 <div class="row" id="popularLinks" style="padding: 0px; margin: 0px">
                     <div class="col s12 m12 l6 xl6">
                         {% if links.0 == none %}
+                            <div class="flow-text " style="font-weight: 900">
+                                No links to show
+                            </div>
                         {% else %}
                             <div class="card card1 horizontal hoverable white-text blue-grey lighten-1">
                   <div class="card-stacked">
@@ -327,6 +330,9 @@
                 <div class="row" id="popularBooks" style="padding: 0px; margin: 0px">
                     <div class="col s12 m12 l6 xl6">
                         {% if books.0 == none %}
+                            <div class="flow-text " style="font-weight: 900">
+                                No books to show
+                            </div>
                         {% else %}
                 <div class="card card1 horizontal hoverable blue-grey white-text lighten-1" >
                     <div class="card-stacked">
